Meta 2/y.output
Terminals unused in grammar

    RESERVED
    assign
    bitwiseor
    bitwisexor
    bitwiseand
    '['
    ']'


State 34 conflicts: 1 shift/reduce
State 54 conflicts: 4 shift/reduce
State 55 conflicts: 4 shift/reduce
State 56 conflicts: 4 shift/reduce
State 93 conflicts: 1 shift/reduce
State 95 conflicts: 18 shift/reduce
State 96 conflicts: 18 shift/reduce
State 97 conflicts: 18 shift/reduce
State 98 conflicts: 4 shift/reduce
State 99 conflicts: 18 shift/reduce
State 100 conflicts: 4 shift/reduce
State 101 conflicts: 4 shift/reduce
State 102 conflicts: 4 shift/reduce
State 103 conflicts: 4 shift/reduce
State 104 conflicts: 4 shift/reduce
State 105 conflicts: 4 shift/reduce
State 106 conflicts: 4 shift/reduce
State 107 conflicts: 4 shift/reduce
State 108 conflicts: 4 shift/reduce
State 109 conflicts: 4 shift/reduce
State 110 conflicts: 4 shift/reduce
State 111 conflicts: 4 shift/reduce
State 112 conflicts: 4 shift/reduce
State 125 conflicts: 1 shift/reduce


Grammar

    0 $accept: FunctionsAndDeclarations $end

    1 FunctionsAndDeclarations: FunctionDefinition
    2                         | FunctionDeclaration
    3                         | Declaration
    4                         | FunctionsAndDeclarations FunctionDefinition
    5                         | FunctionsAndDeclarations FunctionDeclaration
    6                         | FunctionsAndDeclarations Declaration

    7 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody

    8 FunctionBody: LBRACE DeclarationsAndStatements RBRACE
    9             | LBRACE RBRACE

   10 DeclarationsAndStatements: Statement DeclarationsAndStatements
   11                          | Declaration DeclarationsAndStatements
   12                          | Statement
   13                          | Declaration

   14 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI

   15 FunctionDeclarator: IDENTIFIER LPAR ParameterList RPAR

   16 ParameterList: ParameterDeclaration
   17              | ParameterList COMMA ParameterDeclaration

   18 ParameterDeclaration: TypeSpec
   19                     | TypeSpec IDENTIFIER

   20 Declaration: TypeSpec Declarator SEMI
   21            | TypeSpec Declarator Aux_Declaration SEMI

   22 Aux_Declaration: COMMA Declarator
   23                | Aux_Declaration COMMA Declarator

   24 TypeSpec: CHAR
   25         | INT
   26         | VOID
   27         | SHORT
   28         | DOUBLE

   29 Declarator: IDENTIFIER
   30           | IDENTIFIER ASSIGN Expr

   31 Statement: Expr SEMI
   32          | SEMI
   33          | LBRACE RBRACE
   34          | LBRACE Aux_Statement RBRACE
   35          | IF LPAR Expr RPAR Statement
   36          | IF LPAR Expr RPAR Statement ELSE Statement
   37          | WHILE LPAR Expr RPAR Statement
   38          | RETURN SEMI
   39          | RETURN Expr SEMI

   40 Aux_Statement: Statement
   41              | Aux_Statement Statement

   42 Expr: Expr ASSIGN Expr
   43     | Expr COMMA Expr
   44     | Expr PLUS Expr
   45     | Expr MINUS Expr
   46     | Expr MUL Expr
   47     | Expr DIV Expr
   48     | Expr MOD Expr
   49     | Expr OR Expr
   50     | Expr AND Expr
   51     | Expr BITWISEAND Expr
   52     | Expr BITWISEOR Expr
   53     | Expr BITWISEXOR Expr
   54     | Expr EQ Expr
   55     | Expr NE Expr
   56     | Expr LE Expr
   57     | Expr GE Expr
   58     | Expr LT Expr
   59     | Expr GT Expr
   60     | PLUS Expr
   61     | MINUS Expr
   62     | NOT Expr
   63     | IDENTIFIER LPAR RPAR
   64     | IDENTIFIER LPAR Aux_Expr RPAR
   65     | IDENTIFIER
   66     | NATURAL
   67     | CHRLIT
   68     | DECIMAL
   69     | LPAR Expr RPAR

   70 Aux_Expr: Expr
   71         | Aux_Expr COMMA Expr


Terminals, with rules where they appear

    $end (0) 0
    '[' (91)
    ']' (93)
    error (256)
    BITWISEAND (258) 51
    BITWISEOR (259) 52
    BITWISEXOR (260) 53
    AND (261) 50
    ASSIGN (262) 30 42
    MUL (263) 46
    COMMA (264) 17 22 23 43 71
    DIV (265) 47
    EQ (266) 54
    GE (267) 57
    GT (268) 59
    LBRACE (269) 8 9 33 34
    LE (270) 56
    LPAR (271) 15 35 36 37 63 64 69
    LT (272) 58
    MINUS (273) 45 61
    MOD (274) 48
    NE (275) 55
    NOT (276) 62
    OR (277) 49
    PLUS (278) 44 60
    RBRACE (279) 8 9 33 34
    RPAR (280) 15 35 36 37 63 64 69
    SEMI (281) 14 20 21 31 32 38 39
    CHAR (282) 24
    ELSE (283) 36
    WHILE (284) 37
    IF (285) 35 36
    INT (286) 25
    SHORT (287) 27
    DOUBLE (288) 28
    RETURN (289) 38 39
    VOID (290) 26
    CHRLIT <token> (291) 67
    IDENTIFIER <token> (292) 15 19 29 30 63 64 65
    NATURAL <token> (293) 66
    DECIMAL <token> (294) 68
    RESERVED <token> (295)
    LOW (296)
    assign (297)
    bitwiseor (298)
    bitwisexor (299)
    bitwiseand (300)


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    FunctionsAndDeclarations <node> (49)
        on left: 1 2 3 4 5 6
        on right: 0 4 5 6
    FunctionDefinition <node> (50)
        on left: 7
        on right: 1 4
    FunctionBody <node> (51)
        on left: 8 9
        on right: 7
    DeclarationsAndStatements <node> (52)
        on left: 10 11 12 13
        on right: 8 10 11
    FunctionDeclaration <node> (53)
        on left: 14
        on right: 2 5
    FunctionDeclarator <node> (54)
        on left: 15
        on right: 7 14
    ParameterList <node> (55)
        on left: 16 17
        on right: 15 17
    ParameterDeclaration <node> (56)
        on left: 18 19
        on right: 16 17
    Declaration <node> (57)
        on left: 20 21
        on right: 3 6 11 13
    Aux_Declaration (58)
        on left: 22 23
        on right: 21 23
    TypeSpec <node> (59)
        on left: 24 25 26 27 28
        on right: 7 14 18 19 20 21
    Declarator <node> (60)
        on left: 29 30
        on right: 20 21 22 23
    Statement <node> (61)
        on left: 31 32 33 34 35 36 37 38 39
        on right: 10 12 35 36 37 40 41
    Aux_Statement (62)
        on left: 40 41
        on right: 34 41
    Expr <node> (63)
        on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
        on right: 30 31 35 36 37 39 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 69 70 71
    Aux_Expr (64)
        on left: 70 71
        on right: 64 71


State 0

    0 $accept: • FunctionsAndDeclarations $end

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    SHORT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    VOID    shift, and go to state 5

    FunctionsAndDeclarations  go to state 6
    FunctionDefinition        go to state 7
    FunctionDeclaration       go to state 8
    Declaration               go to state 9
    TypeSpec                  go to state 10


State 1

   24 TypeSpec: CHAR •

    $default  reduce using rule 24 (TypeSpec)


State 2

   25 TypeSpec: INT •

    $default  reduce using rule 25 (TypeSpec)


State 3

   27 TypeSpec: SHORT •

    $default  reduce using rule 27 (TypeSpec)


State 4

   28 TypeSpec: DOUBLE •

    $default  reduce using rule 28 (TypeSpec)


State 5

   26 TypeSpec: VOID •

    $default  reduce using rule 26 (TypeSpec)


State 6

    0 $accept: FunctionsAndDeclarations • $end
    4 FunctionsAndDeclarations: FunctionsAndDeclarations • FunctionDefinition
    5                         | FunctionsAndDeclarations • FunctionDeclaration
    6                         | FunctionsAndDeclarations • Declaration

    $end    shift, and go to state 11
    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    SHORT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    VOID    shift, and go to state 5

    FunctionDefinition   go to state 12
    FunctionDeclaration  go to state 13
    Declaration          go to state 14
    TypeSpec             go to state 10


State 7

    1 FunctionsAndDeclarations: FunctionDefinition •

    $default  reduce using rule 1 (FunctionsAndDeclarations)


State 8

    2 FunctionsAndDeclarations: FunctionDeclaration •

    $default  reduce using rule 2 (FunctionsAndDeclarations)


State 9

    3 FunctionsAndDeclarations: Declaration •

    $default  reduce using rule 3 (FunctionsAndDeclarations)


State 10

    7 FunctionDefinition: TypeSpec • FunctionDeclarator FunctionBody
   14 FunctionDeclaration: TypeSpec • FunctionDeclarator SEMI
   20 Declaration: TypeSpec • Declarator SEMI
   21            | TypeSpec • Declarator Aux_Declaration SEMI

    IDENTIFIER  shift, and go to state 15

    FunctionDeclarator  go to state 16
    Declarator          go to state 17


State 11

    0 $accept: FunctionsAndDeclarations $end •

    $default  accept


State 12

    4 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDefinition •

    $default  reduce using rule 4 (FunctionsAndDeclarations)


State 13

    5 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDeclaration •

    $default  reduce using rule 5 (FunctionsAndDeclarations)


State 14

    6 FunctionsAndDeclarations: FunctionsAndDeclarations Declaration •

    $default  reduce using rule 6 (FunctionsAndDeclarations)


State 15

   15 FunctionDeclarator: IDENTIFIER • LPAR ParameterList RPAR
   29 Declarator: IDENTIFIER •
   30           | IDENTIFIER • ASSIGN Expr

    ASSIGN  shift, and go to state 18
    LPAR    shift, and go to state 19

    $default  reduce using rule 29 (Declarator)


State 16

    7 FunctionDefinition: TypeSpec FunctionDeclarator • FunctionBody
   14 FunctionDeclaration: TypeSpec FunctionDeclarator • SEMI

    LBRACE  shift, and go to state 20
    SEMI    shift, and go to state 21

    FunctionBody  go to state 22


State 17

   20 Declaration: TypeSpec Declarator • SEMI
   21            | TypeSpec Declarator • Aux_Declaration SEMI

    COMMA  shift, and go to state 23
    SEMI   shift, and go to state 24

    Aux_Declaration  go to state 25


State 18

   30 Declarator: IDENTIFIER ASSIGN • Expr

    LPAR        shift, and go to state 26
    MINUS       shift, and go to state 27
    NOT         shift, and go to state 28
    PLUS        shift, and go to state 29
    CHRLIT      shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    NATURAL     shift, and go to state 32
    DECIMAL     shift, and go to state 33

    Expr  go to state 34


State 19

   15 FunctionDeclarator: IDENTIFIER LPAR • ParameterList RPAR

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    SHORT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    VOID    shift, and go to state 5

    ParameterList         go to state 35
    ParameterDeclaration  go to state 36
    TypeSpec              go to state 37


State 20

    8 FunctionBody: LBRACE • DeclarationsAndStatements RBRACE
    9             | LBRACE • RBRACE

    LBRACE      shift, and go to state 38
    LPAR        shift, and go to state 26
    MINUS       shift, and go to state 27
    NOT         shift, and go to state 28
    PLUS        shift, and go to state 29
    RBRACE      shift, and go to state 39
    SEMI        shift, and go to state 40
    CHAR        shift, and go to state 1
    WHILE       shift, and go to state 41
    IF          shift, and go to state 42
    INT         shift, and go to state 2
    SHORT       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    RETURN      shift, and go to state 43
    VOID        shift, and go to state 5
    CHRLIT      shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    NATURAL     shift, and go to state 32
    DECIMAL     shift, and go to state 33

    DeclarationsAndStatements  go to state 44
    Declaration                go to state 45
    TypeSpec                   go to state 46
    Statement                  go to state 47
    Expr                       go to state 48


State 21

   14 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI •

    $default  reduce using rule 14 (FunctionDeclaration)


State 22

    7 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody •

    $default  reduce using rule 7 (FunctionDefinition)


State 23

   22 Aux_Declaration: COMMA • Declarator

    IDENTIFIER  shift, and go to state 49

    Declarator  go to state 50


State 24

   20 Declaration: TypeSpec Declarator SEMI •

    $default  reduce using rule 20 (Declaration)


State 25

   21 Declaration: TypeSpec Declarator Aux_Declaration • SEMI
   23 Aux_Declaration: Aux_Declaration • COMMA Declarator

    COMMA  shift, and go to state 51
    SEMI   shift, and go to state 52


State 26

   69 Expr: LPAR • Expr RPAR

    LPAR        shift, and go to state 26
    MINUS       shift, and go to state 27
    NOT         shift, and go to state 28
    PLUS        shift, and go to state 29
    CHRLIT      shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    NATURAL     shift, and go to state 32
    DECIMAL     shift, and go to state 33

    Expr  go to state 53


State 27

   61 Expr: MINUS • Expr

    LPAR        shift, and go to state 26
    MINUS       shift, and go to state 27
    NOT         shift, and go to state 28
    PLUS        shift, and go to state 29
    CHRLIT      shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    NATURAL     shift, and go to state 32
    DECIMAL     shift, and go to state 33

    Expr  go to state 54


State 28

   62 Expr: NOT • Expr

    LPAR        shift, and go to state 26
    MINUS       shift, and go to state 27
    NOT         shift, and go to state 28
    PLUS        shift, and go to state 29
    CHRLIT      shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    NATURAL     shift, and go to state 32
    DECIMAL     shift, and go to state 33

    Expr  go to state 55


State 29

   60 Expr: PLUS • Expr

    LPAR        shift, and go to state 26
    MINUS       shift, and go to state 27
    NOT         shift, and go to state 28
    PLUS        shift, and go to state 29
    CHRLIT      shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    NATURAL     shift, and go to state 32
    DECIMAL     shift, and go to state 33

    Expr  go to state 56


State 30

   67 Expr: CHRLIT •

    $default  reduce using rule 67 (Expr)


State 31

   63 Expr: IDENTIFIER • LPAR RPAR
   64     | IDENTIFIER • LPAR Aux_Expr RPAR
   65     | IDENTIFIER •

    LPAR  shift, and go to state 57

    $default  reduce using rule 65 (Expr)


State 32

   66 Expr: NATURAL •

    $default  reduce using rule 66 (Expr)


State 33

   68 Expr: DECIMAL •

    $default  reduce using rule 68 (Expr)


State 34

   30 Declarator: IDENTIFIER ASSIGN Expr •
   42 Expr: Expr • ASSIGN Expr
   43     | Expr • COMMA Expr
   44     | Expr • PLUS Expr
   45     | Expr • MINUS Expr
   46     | Expr • MUL Expr
   47     | Expr • DIV Expr
   48     | Expr • MOD Expr
   49     | Expr • OR Expr
   50     | Expr • AND Expr
   51     | Expr • BITWISEAND Expr
   52     | Expr • BITWISEOR Expr
   53     | Expr • BITWISEXOR Expr
   54     | Expr • EQ Expr
   55     | Expr • NE Expr
   56     | Expr • LE Expr
   57     | Expr • GE Expr
   58     | Expr • LT Expr
   59     | Expr • GT Expr

    BITWISEAND  shift, and go to state 58
    BITWISEOR   shift, and go to state 59
    BITWISEXOR  shift, and go to state 60
    AND         shift, and go to state 61
    ASSIGN      shift, and go to state 62
    MUL         shift, and go to state 63
    COMMA       shift, and go to state 64
    DIV         shift, and go to state 65
    EQ          shift, and go to state 66
    GE          shift, and go to state 67
    GT          shift, and go to state 68
    LE          shift, and go to state 69
    LT          shift, and go to state 70
    MINUS       shift, and go to state 71
    MOD         shift, and go to state 72
    NE          shift, and go to state 73
    OR          shift, and go to state 74
    PLUS        shift, and go to state 75

    COMMA     [reduce using rule 30 (Declarator)]
    $default  reduce using rule 30 (Declarator)


State 35

   15 FunctionDeclarator: IDENTIFIER LPAR ParameterList • RPAR
   17 ParameterList: ParameterList • COMMA ParameterDeclaration

    COMMA  shift, and go to state 76
    RPAR   shift, and go to state 77


State 36

   16 ParameterList: ParameterDeclaration •

    $default  reduce using rule 16 (ParameterList)


State 37

   18 ParameterDeclaration: TypeSpec •
   19                     | TypeSpec • IDENTIFIER

    IDENTIFIER  shift, and go to state 78

    $default  reduce using rule 18 (ParameterDeclaration)


State 38

   33 Statement: LBRACE • RBRACE
   34          | LBRACE • Aux_Statement RBRACE

    LBRACE      shift, and go to state 38
    LPAR        shift, and go to state 26
    MINUS       shift, and go to state 27
    NOT         shift, and go to state 28
    PLUS        shift, and go to state 29
    RBRACE      shift, and go to state 79
    SEMI        shift, and go to state 40
    WHILE       shift, and go to state 41
    IF          shift, and go to state 42
    RETURN      shift, and go to state 43
    CHRLIT      shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    NATURAL     shift, and go to state 32
    DECIMAL     shift, and go to state 33

    Statement      go to state 80
    Aux_Statement  go to state 81
    Expr           go to state 48


State 39

    9 FunctionBody: LBRACE RBRACE •

    $default  reduce using rule 9 (FunctionBody)


State 40

   32 Statement: SEMI •

    $default  reduce using rule 32 (Statement)


State 41

   37 Statement: WHILE • LPAR Expr RPAR Statement

    LPAR  shift, and go to state 82


State 42

   35 Statement: IF • LPAR Expr RPAR Statement
   36          | IF • LPAR Expr RPAR Statement ELSE Statement

    LPAR  shift, and go to state 83


State 43

   38 Statement: RETURN • SEMI
   39          | RETURN • Expr SEMI

    LPAR        shift, and go to state 26
    MINUS       shift, and go to state 27
    NOT         shift, and go to state 28
    PLUS        shift, and go to state 29
    SEMI        shift, and go to state 84
    CHRLIT      shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    NATURAL     shift, and go to state 32
    DECIMAL     shift, and go to state 33

    Expr  go to state 85


State 44

    8 FunctionBody: LBRACE DeclarationsAndStatements • RBRACE

    RBRACE  shift, and go to state 86


State 45

   11 DeclarationsAndStatements: Declaration • DeclarationsAndStatements
   13                          | Declaration •

    LBRACE      shift, and go to state 38
    LPAR        shift, and go to state 26
    MINUS       shift, and go to state 27
    NOT         shift, and go to state 28
    PLUS        shift, and go to state 29
    SEMI        shift, and go to state 40
    CHAR        shift, and go to state 1
    WHILE       shift, and go to state 41
    IF          shift, and go to state 42
    INT         shift, and go to state 2
    SHORT       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    RETURN      shift, and go to state 43
    VOID        shift, and go to state 5
    CHRLIT      shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    NATURAL     shift, and go to state 32
    DECIMAL     shift, and go to state 33

    $default  reduce using rule 13 (DeclarationsAndStatements)

    DeclarationsAndStatements  go to state 87
    Declaration                go to state 45
    TypeSpec                   go to state 46
    Statement                  go to state 47
    Expr                       go to state 48


State 46

   20 Declaration: TypeSpec • Declarator SEMI
   21            | TypeSpec • Declarator Aux_Declaration SEMI

    IDENTIFIER  shift, and go to state 49

    Declarator  go to state 17


State 47

   10 DeclarationsAndStatements: Statement • DeclarationsAndStatements
   12                          | Statement •

    LBRACE      shift, and go to state 38
    LPAR        shift, and go to state 26
    MINUS       shift, and go to state 27
    NOT         shift, and go to state 28
    PLUS        shift, and go to state 29
    SEMI        shift, and go to state 40
    CHAR        shift, and go to state 1
    WHILE       shift, and go to state 41
    IF          shift, and go to state 42
    INT         shift, and go to state 2
    SHORT       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    RETURN      shift, and go to state 43
    VOID        shift, and go to state 5
    CHRLIT      shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    NATURAL     shift, and go to state 32
    DECIMAL     shift, and go to state 33

    $default  reduce using rule 12 (DeclarationsAndStatements)

    DeclarationsAndStatements  go to state 88
    Declaration                go to state 45
    TypeSpec                   go to state 46
    Statement                  go to state 47
    Expr                       go to state 48


State 48

   31 Statement: Expr • SEMI
   42 Expr: Expr • ASSIGN Expr
   43     | Expr • COMMA Expr
   44     | Expr • PLUS Expr
   45     | Expr • MINUS Expr
   46     | Expr • MUL Expr
   47     | Expr • DIV Expr
   48     | Expr • MOD Expr
   49     | Expr • OR Expr
   50     | Expr • AND Expr
   51     | Expr • BITWISEAND Expr
   52     | Expr • BITWISEOR Expr
   53     | Expr • BITWISEXOR Expr
   54     | Expr • EQ Expr
   55     | Expr • NE Expr
   56     | Expr • LE Expr
   57     | Expr • GE Expr
   58     | Expr • LT Expr
   59     | Expr • GT Expr

    BITWISEAND  shift, and go to state 58
    BITWISEOR   shift, and go to state 59
    BITWISEXOR  shift, and go to state 60
    AND         shift, and go to state 61
    ASSIGN      shift, and go to state 62
    MUL         shift, and go to state 63
    COMMA       shift, and go to state 64
    DIV         shift, and go to state 65
    EQ          shift, and go to state 66
    GE          shift, and go to state 67
    GT          shift, and go to state 68
    LE          shift, and go to state 69
    LT          shift, and go to state 70
    MINUS       shift, and go to state 71
    MOD         shift, and go to state 72
    NE          shift, and go to state 73
    OR          shift, and go to state 74
    PLUS        shift, and go to state 75
    SEMI        shift, and go to state 89


State 49

   29 Declarator: IDENTIFIER •
   30           | IDENTIFIER • ASSIGN Expr

    ASSIGN  shift, and go to state 18

    $default  reduce using rule 29 (Declarator)


State 50

   22 Aux_Declaration: COMMA Declarator •

    $default  reduce using rule 22 (Aux_Declaration)


State 51

   23 Aux_Declaration: Aux_Declaration COMMA • Declarator

    IDENTIFIER  shift, and go to state 49

    Declarator  go to state 90


State 52

   21 Declaration: TypeSpec Declarator Aux_Declaration SEMI •

    $default  reduce using rule 21 (Declaration)


State 53

   42 Expr: Expr • ASSIGN Expr
   43     | Expr • COMMA Expr
   44     | Expr • PLUS Expr
   45     | Expr • MINUS Expr
   46     | Expr • MUL Expr
   47     | Expr • DIV Expr
   48     | Expr • MOD Expr
   49     | Expr • OR Expr
   50     | Expr • AND Expr
   51     | Expr • BITWISEAND Expr
   52     | Expr • BITWISEOR Expr
   53     | Expr • BITWISEXOR Expr
   54     | Expr • EQ Expr
   55     | Expr • NE Expr
   56     | Expr • LE Expr
   57     | Expr • GE Expr
   58     | Expr • LT Expr
   59     | Expr • GT Expr
   69     | LPAR Expr • RPAR

    BITWISEAND  shift, and go to state 58
    BITWISEOR   shift, and go to state 59
    BITWISEXOR  shift, and go to state 60
    AND         shift, and go to state 61
    ASSIGN      shift, and go to state 62
    MUL         shift, and go to state 63
    COMMA       shift, and go to state 64
    DIV         shift, and go to state 65
    EQ          shift, and go to state 66
    GE          shift, and go to state 67
    GT          shift, and go to state 68
    LE          shift, and go to state 69
    LT          shift, and go to state 70
    MINUS       shift, and go to state 71
    MOD         shift, and go to state 72
    NE          shift, and go to state 73
    OR          shift, and go to state 74
    PLUS        shift, and go to state 75
    RPAR        shift, and go to state 91


State 54

   42 Expr: Expr • ASSIGN Expr
   43     | Expr • COMMA Expr
   44     | Expr • PLUS Expr
   45     | Expr • MINUS Expr
   46     | Expr • MUL Expr
   47     | Expr • DIV Expr
   48     | Expr • MOD Expr
   49     | Expr • OR Expr
   50     | Expr • AND Expr
   51     | Expr • BITWISEAND Expr
   52     | Expr • BITWISEOR Expr
   53     | Expr • BITWISEXOR Expr
   54     | Expr • EQ Expr
   55     | Expr • NE Expr
   56     | Expr • LE Expr
   57     | Expr • GE Expr
   58     | Expr • LT Expr
   59     | Expr • GT Expr
   61     | MINUS Expr •

    BITWISEAND  shift, and go to state 58
    BITWISEOR   shift, and go to state 59
    BITWISEXOR  shift, and go to state 60
    ASSIGN      shift, and go to state 62
    MUL         shift, and go to state 63
    DIV         shift, and go to state 65
    MOD         shift, and go to state 72

    BITWISEAND  [reduce using rule 61 (Expr)]
    BITWISEOR   [reduce using rule 61 (Expr)]
    BITWISEXOR  [reduce using rule 61 (Expr)]
    ASSIGN      [reduce using rule 61 (Expr)]
    $default    reduce using rule 61 (Expr)


State 55

   42 Expr: Expr • ASSIGN Expr
   43     | Expr • COMMA Expr
   44     | Expr • PLUS Expr
   45     | Expr • MINUS Expr
   46     | Expr • MUL Expr
   47     | Expr • DIV Expr
   48     | Expr • MOD Expr
   49     | Expr • OR Expr
   50     | Expr • AND Expr
   51     | Expr • BITWISEAND Expr
   52     | Expr • BITWISEOR Expr
   53     | Expr • BITWISEXOR Expr
   54     | Expr • EQ Expr
   55     | Expr • NE Expr
   56     | Expr • LE Expr
   57     | Expr • GE Expr
   58     | Expr • LT Expr
   59     | Expr • GT Expr
   62     | NOT Expr •

    BITWISEAND  shift, and go to state 58
    BITWISEOR   shift, and go to state 59
    BITWISEXOR  shift, and go to state 60
    ASSIGN      shift, and go to state 62

    BITWISEAND  [reduce using rule 62 (Expr)]
    BITWISEOR   [reduce using rule 62 (Expr)]
    BITWISEXOR  [reduce using rule 62 (Expr)]
    ASSIGN      [reduce using rule 62 (Expr)]
    $default    reduce using rule 62 (Expr)


State 56

   42 Expr: Expr • ASSIGN Expr
   43     | Expr • COMMA Expr
   44     | Expr • PLUS Expr
   45     | Expr • MINUS Expr
   46     | Expr • MUL Expr
   47     | Expr • DIV Expr
   48     | Expr • MOD Expr
   49     | Expr • OR Expr
   50     | Expr • AND Expr
   51     | Expr • BITWISEAND Expr
   52     | Expr • BITWISEOR Expr
   53     | Expr • BITWISEXOR Expr
   54     | Expr • EQ Expr
   55     | Expr • NE Expr
   56     | Expr • LE Expr
   57     | Expr • GE Expr
   58     | Expr • LT Expr
   59     | Expr • GT Expr
   60     | PLUS Expr •

    BITWISEAND  shift, and go to state 58
    BITWISEOR   shift, and go to state 59
    BITWISEXOR  shift, and go to state 60
    ASSIGN      shift, and go to state 62
    MUL         shift, and go to state 63
    DIV         shift, and go to state 65
    MOD         shift, and go to state 72

    BITWISEAND  [reduce using rule 60 (Expr)]
    BITWISEOR   [reduce using rule 60 (Expr)]
    BITWISEXOR  [reduce using rule 60 (Expr)]
    ASSIGN      [reduce using rule 60 (Expr)]
    $default    reduce using rule 60 (Expr)


State 57

   63 Expr: IDENTIFIER LPAR • RPAR
   64     | IDENTIFIER LPAR • Aux_Expr RPAR

    LPAR        shift, and go to state 26
    MINUS       shift, and go to state 27
    NOT         shift, and go to state 28
    PLUS        shift, and go to state 29
    RPAR        shift, and go to state 92
    CHRLIT      shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    NATURAL     shift, and go to state 32
    DECIMAL     shift, and go to state 33

    Expr      go to state 93
    Aux_Expr  go to state 94


State 58

   51 Expr: Expr BITWISEAND • Expr

    LPAR        shift, and go to state 26
    MINUS       shift, and go to state 27
    NOT         shift, and go to state 28
    PLUS        shift, and go to state 29
    CHRLIT      shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    NATURAL     shift, and go to state 32
    DECIMAL     shift, and go to state 33

    Expr  go to state 95


State 59

   52 Expr: Expr BITWISEOR • Expr
